Absolute positioning for tracking pixels to prevent gap at bottom of page

--- a/wp-content/themes/bokka-wp-theme-child/assets/src/css/objects/footer.css
+++ b/wp-content/themes/bokka-wp-theme-child/assets/src/css/objects/footer.css
@@ -340,3 +340,13 @@
         }
     }
 }
+
+/* positioning for tracking pixels to prevent gap at bottom of page */
+.footer-pixel {
+    position: absolute;
+
+    + img {
+        position: absolute;
+    }
+}
+
